--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,11 +16,17 @@
     window.onload = function() {
       const timeSelect = document.getElementById('time');
       const genderSelect = document.getElementById('gender');
-      const marketSelect = document.getElementById('market');
+      const revenueSelect = document.getElementById('revenue');
+      const popularitySelect = document.getElementById('popularity');
+      const moviesSelect = document.getElementById('movies');
+      const top5billingSelect = document.getElementById('top5billing');
 
       timeSelect.addEventListener('change', submitForm);
       genderSelect.addEventListener('change', submitForm);
-      marketSelect.addEventListener('change', submitForm);
+      revenueSelect.addEventListener('change', submitForm);
+      popularitySelect.addEventListener('change', submitForm);
+      moviesSelect.addEventListener('change', submitForm);
+      top5billingSelect.addEventListener('change', submitForm);
     }
   </script>
 </head>
@@ -29,7 +35,7 @@
   <div class="header">
     <div>
   <h1>Directed by Women</h1>
-  <h2 class="subtitle">Top List of Actresses and Actors in Films by Female Directors</h2>
+  <h2 class="subtitle">Top List of Performers in Films by Female Directors</h2>
 </div>
   <form id="filter-form">
     <div>
@@ -45,18 +51,53 @@
     <label for="gender">Gender:</label>
     <select id="gender" name="gender">
       <option value="all" <%= gender === 'all' ? 'selected' : '' %>>All</option>
-      <option value="2" <%= gender === '2' ? 'selected' : '' %>>Actors</option>
       <option value="1" <%= gender === '1' ? 'selected' : '' %>>Actresses</option>
+      <option value="2" <%= gender === '2' ? 'selected' : '' %>>Actors</option>
+      <option value="3" <%= gender === '3' ? 'selected' : '' %>>Non-Binary</option>
     </select>
 </div>
-<!-- <div>
-    <label for="market">Market:</label>
-     <select id="market" name="market">
-      <option value="world" <%= market === 'world' ? 'selected' : '' %>>World</option>
-      <option value="us" <%= market === 'us' ? 'selected' : '' %>>US</option>
-      <option value="europe" <%= market === 'europe' ? 'selected' : '' %>>Europe</option>
+<div>
+    <label for="revenue">Revenue all movies:</label>
+    <select id="revenue" name="revenue">
+      <option value="all" <%= revenue === 'all' ? 'selected' : '' %>>All</option>
+      <option value="1000000" <%= revenue === '1000000' ? 'selected' : '' %>>Above 1 Million</option>
+      <option value="100000000" <%= revenue === '100000000' ? 'selected' : '' %>>Above 100 Million</option>
+      <option value="500000000" <%= revenue === '500000000' ? 'selected' : '' %>>Above 500 Million</option>
+      <option value="1000000000" <%= revenue === '10000000000' ? 'selected' : '' %>>Above 1 Billion</option>
+      <option value="5000000000" <%= revenue === '5000000000' ? 'selected' : '' %>>Above 5 Billion</option>
     </select>
-</div> -->
+</div>
+<div>
+    <label for="movies">Movie credits:</label>
+    <select id="movies" name="movies">
+      <option value="all" <%= movies === 'all' ? 'selected' : '' %>>All</option>
+      <option value="10" <%= movies === '10' ? 'selected' : '' %>>At least 10</option>
+      <option value="25" <%= movies === '25' ? 'selected' : '' %>>At least 25</option>
+      <option value="50" <%= movies === '50' ? 'selected' : '' %>>At least 50</option>
+      <option value="100" <%= movies === '100' ? 'selected' : '' %>>At least 100</option>
+    </select>
+</div>
+<div>
+    <label for="top5billing">Top 5 billings:</label>
+    <select id="top5billing" name="top5billing">
+      <option value="all" <%= top5billing === 'all' ? 'selected' : '' %>>All</option>
+      <option value="5" <%= top5billing === '5' ? 'selected' : '' %>>At least 5</option>
+      <option value="10" <%= top5billing === '10' ? 'selected' : '' %>>At least 10</option>
+      <option value="20" <%= top5billing === '20' ? 'selected' : '' %>>At least 20</option>
+    </select>
+</div>
+<div>
+    <label for="popularity">TMDB popularity:</label>
+    <select id="popularity" name="popularity">
+      <option value="all" <%= popularity === 'all' ? 'selected' : '' %>>All</option>
+      <option value="10" <%= popularity === '10' ? 'selected' : '' %>>Above 10</option>
+      <option value="25" <%= popularity === '25' ? 'selected' : '' %>>Above 25</option>
+      <option value="50" <%= popularity === '50' ? 'selected' : '' %>>Above 50</option>
+      <option value="100" <%= popularity === '100' ? 'selected' : '' %>>Above 100</option>
+    </select>
+</div>
+<br/>
+<div><a href="/all">Browse all</a></div>
   </form>
   </div>
 <!-- Actors list -->
@@ -86,9 +127,17 @@
 
 
 <footer>
-    <a href="about.html">About this page</a> | 
-    &copy; 2024  |
-    Powered by : <a href="https://www.themoviedb.org/"><img src="/blue_short-tmdb.svg" alt="TMDB Logo" style="width: 150px;"></a>
+    <div>
+      <a href="about.html">About this page</a>, &copy; 2024
+    </div>
+
+    <div>
+      Powered by :  <a href="https://www.themoviedb.org/"><img src="/blue_short-tmdb.svg" alt="TMDB Logo" style="width: 150px;"></a>
+    </div>
+
+    <div>
+      <a href='https://ko-fi.com/W7W41KRRZ' target='_blank'><img height='36' style='border:0px;height:36px;' src='https://storage.ko-fi.com/cdn/kofi3.png?v=3' border='0' alt='Buy Me a Coffee at ko-fi.com' /></a>
+    </div>
   </footer>
 
 </body>
