--- a/views/actor.ejs
+++ b/views/actor.ejs
@@ -18,12 +18,15 @@
         <li><strong>ID:</strong> <%= actor.id %></li>
         <li><strong>Original Name:</strong> <%= actor.original_name %></li>
         <li><strong>Gender:</strong> <%= actor.gender === 1 ? 'Female' : actor.gender === 2 ? 'Male' : 'Non-Binary' %></li>
+        <li><strong>Birthday:</strong> <%= actor.birthday ? new Date(actor.birthday).toDateString() : "N/A" %></li>
+        <li><strong>Deathday:</strong> <%= actor.deathday ? new Date(actor.deathday).toDateString() : "" %></li>
         <li><strong>Known for:</strong> <%= actor.known_for_department %></li>
         <li><strong>Popularity:</strong> <%= actor.popularity %></li>
         <li><strong>Revenue:</strong> <%= actor.revenue ? actor.revenue : 'N/A' %></li>
         <li><strong>Total Movies:</strong> <%= actor.movies_total %></li>
         <li><strong>directedByWomenPercentage:</strong> <%= (actor.directedByWomenPercentage * 100).toFixed(0) %>% %></li>
         <li><strong>top5billing:</strong> <%= actor.top5billing ? actor.top5billing : 'N/A' %> </li>
+        <li><strong>topLanguage:</strong> <%= actor.topLanguage %> </li>
         <li><strong>Last Updated:</strong> <%= actor.updated.toLocaleString() %></li>
         <li><strong>Profile Image:</strong> 
             <% if (actor.file_path) { %>
